...
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const Padding(
                      padding: EdgeInsets.fromLTRB(30, 20, 0, 0),
                      child: Text(
                        "Login as a Player",
                        style: StyledText.loginStyle,
                      ),
                    ),
                    const Padding(
                      padding: EdgeInsets.fromLTRB(30, 10, 0, 0),
                      child: Text(
...
                      ),
                    ),
                    const SizedBox(
                      height: 20.0,
                    ),
                    AuthButton(
                      key: const Key('loginButton'),
                      "LOGIN ", CustomColors.darkPrimary,
                        '/player_dashboard', true, () {
                      context.read<LoginFormBloc>().add(
                            const LoginFormEvent
                                .loginWithEmailAndPasswordPressed(),
                          );
...
